--- a/turbulus.Frontend/src/less/basics.less
+++ b/turbulus.Frontend/src/less/basics.less
@@ -1,6 +1,19 @@
 html { font-size: 62.5%; }
 
 body {
+	.bodyFont();
+	
 	font-size: 1.6em;
 	color: @color_primary;
+}
+
+main {
+	max-width: 75ch;
+	margin-inline-start: auto;
+	margin-inline-end: auto;
+	margin-block-start: 2em;
+	
+	> * + * {
+		margin-top: 1.5em;
+	}
 }
