--- a/turbulus.Frontend/src/components/yearfilter/yearfilter.less
+++ b/turbulus.Frontend/src/components/yearfilter/yearfilter.less
@@ -14,5 +14,11 @@
 	
 	a {
 		padding: 0.3em 1em;
+		text-decoration: none;
+	}
+	
+	.selected a {
+		font-weight: bold;
+		text-decoration: underline;
 	}
 }
